# hgface-1

./: .gitignore  plan.md  pyproject.toml
BERT/: bert_01_basics.py  bert_02_classification.py  bert_03_qa_ner.py  bert_04_advanced.py
Distillation/: distillation_01_basics.py  distillation_02_text_classification.py  distillation_03_vision_deit.py  distillation_04_feature.py  distillation_05_advanced.py
TTS/: tts_01_audio_basics.py  tts_02_hf_models.py  tts_03_speecht5_deep.py  tts_04_bark_deep.py  tts_05_advanced.py
VIT/: vit_01_basics.py  vit_02_image_classification.py  vit_03_finetuning.py  vit_04_variants.py  vit_05_multimodal_role.py
local_data/from_tensor_dataset/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
multimodal/: multimodal_01_clip_deep.py  multimodal_02_blip.py  multimodal_03_stable_diffusion.py  multimodal_04_retrieval.py  multimodal_05_llava.py
notes/: BLIP.md  TorchDataset的由来.md  clipvisionmodel.md  diffusers.md  hgface_dataset.md  padding的时机.md  prompt.md  split.md  一等公民.md  分词器tokenizer.md  各种dataset.md  各种processor.md  因果掩码.md  数据集目录安排.md
py/: project1_text_classification.py  project2_lora_finetune.py  project3_multimodal_clip.py  project4_custom_dataset.py  project5_dataset_map.py  project6_tensor_dataset.py  project7_dataset_convert.py
