[project]
name = "hgface-1"
version = "0.1.0"
description = "Hugging Face Transformers 实践项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "torch>=2.2.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "torchvision>=0.28.0",
    "matplotlib>=3.10.9",
    "diffusers>=0.39.0",
    "torchaudio>=2.11.0",
    "scipy>=1.15.3",
    "soundfile>=0.14.0",
    "torchcodec>=0.15.0",
]

[dependency-groups]
dev = []

